# WCH32-flasher-android

./: .gitignore  APPIUM_TESTING.md  CRASH_DEBUGGING_GUIDE.md  LICENSE  README.md  Software Spec.md  TESTING.md  build-native.sh  build.gradle  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build-apk.yml  build.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/wch/flasher/: AndroidTestSuite.kt  AppiumTestBase.kt  MainActivityAppiumTest.kt  MainActivityEspressoTest.kt  NativeLibraryIntegrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ch32flasher/: MainActivity.kt
app/src/main/java/com/wch/flasher/: DebugApplication.kt  MainActivity.kt  WchispNative.kt
app/src/main/res/drawable/: ic_chip.xml  ic_document.xml  ic_erase.xml  ic_file_upload.xml  ic_flash.xml  ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  device_filter.xml
app/src/test/java/com/wch/flasher/: ChipDatabaseTest.kt  IntegrationTest.kt  MainActivityTest.kt  WchispNativeTest.kt
gradle/: libs.versions.toml
native/wchisp-android/: Cargo.toml
native/wchisp-android/src/: device.rs  flashing.rs  lib.rs  lib.rs.bak  protocol.rs  transport.rs
rust/: Cargo.toml
rust/devices/: 0x10-CH56x.yaml  0x14-CH32F103.yaml  0x15-CH32V103.yaml  0x17-CH32V30x.yaml  0x18-CH32F20x.yaml  0x19-CH32V20x.yaml  0x20-CH32F20x-Compact.yaml  0x21-CH32V00x.yaml  0x22-CH59x.yaml  0x23-CH32X03x.yaml  0x24-CH643.yaml  SCHEMA.yaml
rust/src/: android_logger.rs  device.rs  flashing.rs  format.rs  lib.rs  protocol.rs
rust/src/transport/: android.rs  mod.rs  serial.rs
rust/tests/: protocol_test.rs
