[package]
name = "wchisp"
version = "0.3.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/wchisp"
documentation = "https://docs.rs/wchisp/"
homepage = "https://github.com/ch32-rs/wchisp"
categories = ["embedded", "command-line-utilities", "command-line-utilities"]
description = "A command-line implementation of WCHISPTool, for flashing ch32 MC
Us"
keywords = ["wch", "cli", "ch32", "embedded"]
readme = "README.md"
license = "GPL-2.0"
include = ["**/*.rs", "devices/**/*.yaml", "Cargo.toml", "LICENSE", "README.md"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
rand = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
bitfield = "0.17.0"
scroll = "0.12.0"
simplelog = "0.12"
hex = "0.4"
ihex = "3"
hxdmp = "0.2"
object = { version = "0.36.0", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }
indicatif = "0.17"
serialport = { version = "4.5", default-features = false }
