[package]
name = "wchisp-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "wchisp_android"
crate-type = ["cdylib"]

[dependencies]
# Core WCH ISP functionality (adapted from wchisp)
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bitfield = "0.17.0"
scroll = "0.12.0"
hex = "0.4"
ihex = "3"
object = { version = "0.36.0", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }

# JNI bindings for Android integration
jni = "0.21"

# Android logging
android_logger = "0.13"

# Serialization for data transfer
bincode = "1.3"

# Random number generation for encryption padding
rand = "0.8"

# Global state management
lazy_static = "1.4"

[features]
default = []